<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/primary"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etGroupName"
        android:layout_marginBottom="20dp"
        android:hint="@string/group_name"
        android:textCursorDrawable="@drawable/edit_cursor"
        android:textSize="20sp"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="@color/white"
        app:met_singleLineEllipsis="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|end"
        android:layout_marginBottom="20dp">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textAllCaps="true" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/ok"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>