<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_texture">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ecloga_logo"
                android:padding="10dp"
                android:background="@color/clouds" />

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/group_dark_dark"
                android:id="@+id/rl1"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/tvTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/about_us_header"
                    android:layout_alignParentTop="true"
                    android:background="@color/group_dark"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/el1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitle1"
                    app:defaultVisibility="false"
                    android:padding="10dp"
                    app:duration="500"
                    app:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDescription1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/about_us_text"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/group_dark_dark"
                android:id="@+id/rl2"
                android:clickable="true"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/tvTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/contact_us_header"
                    android:layout_alignParentTop="true"
                    android:background="@color/group_dark"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/el2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitle2"
                    app:defaultVisibility="false"
                    android:padding="10dp"
                    app:duration="500"
                    app:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDescription2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/contact_us_text"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
